<resources>
    <string name="app_name">MM-Healthcare-App-Assignment-YYP</string>
    <string name="action_settings">Settings</string>
    <string name="pretty">Pretty</string>
    <string name="justin">justin</string>
    <string name="_5302">5302</string>
    <string name="_229">229</string>
    <string name="_56">56</string>
    <string name="category_name">Pretty</string>
    <string name="publisher_name">jssharm</string>
    <string name="_9840">9840</string>
    <string name="like_258">258</string>
    <string name="comments_455">455</string>
</resources>
