<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="@dimen/margin_medium_2"
    android:layout_marginRight="@dimen/margin_medium_2">

    <org.mmtextview.components.MMTextView
        android:id="@+id/tv_health_care_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Find it useful and want to contribute? All sorts of contributions are welcome"
        android:textSize="@dimen/text_regular_2x"
        android:textColor="@color/primary_text"
        android:lineSpacingMultiplier="1.2"
        android:layout_marginTop="@dimen/margin_medium"
        />

    <ImageView
        android:id="@+id/iv_health_care_img"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        tools:src="@drawable/img_body_healthy"
        android:layout_below="@id/tv_health_care_title"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/margin_medium"
        />

    <TextView
        android:id="@+id/tv_healthy_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_name"
        android:textSize="@dimen/text_small"
        android:layout_below="@id/iv_health_care_img"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/shape_category"
        android:padding="2dp"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publisher_name"
        android:textSize="@dimen/text_regular"
        android:layout_below="@id/iv_health_care_img"
        android:layout_toEndOf="@id/tv_healthy_category"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        />

    <TextView
        android:id="@+id/tv_looks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9840"
        android:textSize="@dimen/text_regular"
        android:layout_below="@id/iv_health_care_img"
        android:layout_toEndOf="@id/tv_name"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:drawablePadding="@dimen/margin_small"
        android:drawableStart="@drawable/ic_minus_square_outlined_button"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/tv_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_comment"
        android:text="@string/comments_455"
        android:textSize="@dimen/text_regular"
        android:layout_below="@id/iv_health_care_img"
        android:layout_toEndOf="@id/tv_looks"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:drawablePadding="@dimen/margin_small"
        />

    <TextView
        android:id="@+id/tv_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like_258"
        android:textSize="@dimen/text_regular"
        android:drawableStart="@drawable/ic_like"
        android:layout_below="@id/iv_health_care_img"
        android:layout_toEndOf="@+id/tv_comments"
        android:layout_marginTop="@dimen/margin_medium"
        android:drawablePadding="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium"
        />

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_like"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/divider"
        />

</RelativeLayout>